--- a/templates/powerlift.html
+++ b/templates/powerlift.html
@@ -205,7 +205,7 @@
 
     <section class="content" id="weightsStyles"> <!-- Weights & styles -->
         <div class="row">
-            <div class="column14">
+            <div class="column14 topline">
                 <div style="margin: 20px">
                     <button class="buy-button upgrade" 
                         type="button"
@@ -217,8 +217,8 @@
                     </button>
                 </div>
             </div>
-            <div class="column34 upgrade">
-                <h1 class="upgrade-bold size36">Upgrade<span class="upgrade"> weights & styles</span></h1>
+            <div class="column34 upgrade topline">
+                <h1 class="powerlift size36">PowerLift<span class="powerlift-outline"> weights & styles</span></h1>
             </div>
         </div>
 
@@ -235,7 +235,7 @@
 
     <section class="content" id="openTypeFeatures"> <!-- OpenType features -->
         <div class="row">
-            <div class="column14">
+            <div class="column14 topline">
                 <div style="margin: 20px">
                     <button class="buy-button upgrade" 
                         type="button"
@@ -247,8 +247,8 @@
                     </button>
                 </div>
             </div>
-            <div class="column34">
-                <h1 class="powerlift size36">Upgrade<span class="powerlift-outline"> OpenType features</span></h1>
+            <div class="column34 topline">
+                <h1 class="powerlift size36">PowerLift<span class="powerlift-outline"> OpenType features</span></h1>
             </div>
         </div>
         <div class="row">
@@ -258,60 +258,40 @@
                 </div>
             </div>
             <div class="column34 upgrade">
-                <p class="size24">
+                <p class="size24 upgrade">
                     TYPETR PowerLift family implements an extended OpenType feature set.
 
-                    <h4>Standard ligatures [liga]</h4>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="no_liga">file, fjord, flow, loft (off)</div>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="liga">file, fjord, flow, loft (on)</div>
-                                        
-                    <h4>CSS tabular figures [tnum]</h4>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">0123456789 (default off)</div>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="tnum">0123456789 (on)</div>
-                    
-                    <h4>CSS oldstyle figures [onum]</h4>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">ABC 0123456789 abc (default off)</div>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="onum">ABC 0123456789 abc (on)</div>
-                    
                     <h4>CSS superior figures [sups]</h4>
                     <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (default off)</div>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="sups">A0B1C2D3E4F5G6H7I8J9 (on)</div>
+                    <div class="powerlift sups" style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (on)</div>
                                         
-                    <h4>CSS superior lowercase [sups]</h4>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">AaBbCcDdEeFfGgHhIiJjKkLlMm... (default off)</div>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="sups">AaBbCcDdEeFfGgHhIiJjKkLlMm... (on)</div>
-
                     <h4>CSS numerator figures [numr]</h4>
                     <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (default off)</div>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="numr">A0B1C2D3E4F5G6H7I8J9 (on)</div>
+                    <div class="powerlift numr" style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (on)</div>
 
                     <h4>CSS denomunator figures [dnom]</h4>
                     <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (default off)</div>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="dnom">A0B1C2D3E4F5G6H7I8J9 (on)</div>
+                    <div class="powerlift dnom" style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (on)</div>
                     
                     <h4>CSS inferior figures [sinf]</h4>
                     <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (default off)</div>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="sinf">A0B1C2D3E4F5G6H7I8J9 (on)</div>
+                    <div class="powerlift sinf" style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (on)</div>
 
-                    <h4>CSS inferior lowercase [sinf]</h4>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">AaBbCcDdEeFfGgHhIiJjKkLlMm... (default off)</div>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="sinf">AaBbCcDdEeFfGgHhIiJjKkLlMm... (on)</div>
-
-                    <h4>Fractions [frac] using numerator/denominator figures</h4>
+                    <h4>CSS fractions [frac] using numerator/denominator figures</h4>
                     <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">1/2 1/3 1/4 1/5 234/567 (default off)</div>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="frac"> 1/2 1/3 1/4 1/5 234/567 (on)</div>
+                    <div class="powerlift frac" style="line-height: 1.4em;font-size: 2em;"> 1/2 1/3 1/4 1/5 234/567 (on)</div>
                     
                     <h4>CSS caps to small caps [c2sc]</h4>
                     <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">Design is Detail Management (default off)</div>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="c2sc">Design is Detail Management (on)</div>
+                    <div class="powerlift c2sc" style="line-height: 1.4em;font-size: 2em;">Design is Detail Management (on)</div>
                     
                     <h4>CSS lowercase to small caps [smcp]</h4>
                     <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">Design is Detail Management (default off)</div>
-                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="smcp">Design is Detail Management (on)</div>
+                    <div class="powerlift smcp" style="line-height: 1.4em;font-size: 2em;">Design is Detail Management (on)</div>
                     
-                    <h4>CSS caps to small caps [c2sc] + [smcp]</h4>
-                    <div style="line-height: 1.4em;font-size: 2em;">Design is Detail Management (default off)</div>
-                    <div style="line-height: 1.4em;font-size: 2em;" class="c2sc-smcp">Design is Detail Management (on)</div>
+                    <h4>CSS caps and lowercase to small caps [c2sc] + [smcp]</h4>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">Design is Detail Management (default off)</div>
+                    <div class="powerlift c2sc-smcp" style="line-height: 1.4em;font-size: 2em;">Design is Detail Management (on)</div>
                     
                 </p>
             </div>
@@ -320,7 +300,7 @@
 
     <section class="content" id="glyphSet"> <!-- Glyph set -->
         <div class="row responsiveHide">
-            <div class="column14">
+            <div class="column14 topline">
                 <div style="margin: 20px">
                     <button class="buy-button upgrade" 
                         type="button"
@@ -332,16 +312,17 @@
                     </button>
                 </div>
             </div>
-            <div class="column34 upgrade">
-                <h1 class="upgrade-bold size36">Upgrade<span class="upgrade"> glyph set</span></h1>
+            <div class="column34 upgrade topline">
+                <h1 class="powerlift size36">PowerLift<span class="powerlift-outline"> glyph set</span></h1>
             </div>
         </div>
 
-        <div class="row type-tester responsiveHide"> <!-- Upgrade character viewer -->
-            <div style="width: 95%">
-                <fontdue-character-viewer collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ=="></fontdue-character-viewer>
+        <div class="row responsiveHide"> <!-- PowerLift type tester -->
+            <div class="type-tester">
+                <fontdue-character-viewer collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ4NTEzMjQ1NzM4ODg4NQ=="></fontdue-character-viewer>
             </div>
         </div>
+
     </section>
 
     <footer>
