--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -2077,7 +2077,7 @@ button:hover {
         padding-left: 16px;
         padding-right: 16px;
     }
-    div.column14, div.column34 {
+    div.column14, div.column34, div.column13, div.column23 {
         width: 100%;
         padding: 16px;
     }
@@ -2124,7 +2124,7 @@ button:hover {
         padding-left: 16px;
         padding-right: 16px;
     }
-    div.column14, div.column34 {
+    div.column14, div.column34, div.column13, div.column23 {
         width: 100%;
         padding: 16px;
     }
@@ -2171,7 +2171,7 @@ button:hover {
         padding-left: 16px;
         padding-right: 16px;
     }
-    div.column14, div.column34 {
+    div.column14, div.column34, div.column13, div.column23 {
         width: 100%;
         padding: 16px;
     }
@@ -2218,7 +2218,7 @@ button:hover {
         padding-left: 16px;
         padding-right: 16px;
     }
-    div.column14, div.column34 {
+    div.column14, div.column34, div.column13, div.column23 {
         width: 100%;
         padding: 16px;
     }
@@ -2263,7 +2263,7 @@ button:hover {
         padding-left: 16px;
         padding-right: 16px;
     }
-    div.column14, div.column34 {
+    div.column14, div.column34, div.column13, div.column23 {
         width: 100%;
         padding: 16px;
     }
