Adding Presti title image with calibrated responsive sizes

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1866,6 +1866,15 @@ header .hamburger {
 
 /* Image cells */
 
+.titleImage {
+    margin-top: 20px; 
+    width: 100%; 
+    height: 400px; 
+    background-size: contain;
+    background-position: center;
+    background-repeat: repeat;
+}
+
 div.image {
     width: 98%;
     height: 100%;
@@ -2090,6 +2099,9 @@ button:hover {
     .name-title {
         font-size: 2em;  
     }
+    .titleImage {
+        height: 200px;
+    }
     footer {
         text-align: center;
         background-color: white;
@@ -2133,6 +2145,9 @@ button:hover {
     }
     div.responsiveShow, div.smallWeightTester  {
         display: block;
+    }
+    .titleImage {
+        height: 200px;
     }
     .name-title {
         font-size: 2.5em;  
@@ -2181,6 +2196,9 @@ button:hover {
     div.responsiveShow, div.smallWeightTester  {
         display: block;
     }
+    .titleImage {
+        height: 200px;
+    }
     .name-title {
         font-size: 3em;  
     }
@@ -2228,6 +2246,9 @@ button:hover {
     div.responsiveShow, div.smallWeightTester {
         display: block;
     }
+    .titleImage {
+        height: 200px;
+    }
     .name-title {
         font-size: 3.5em;  
     }
@@ -2242,6 +2263,7 @@ button:hover {
 }
 /* -------------------------------------------------------------- */
 /* Small Tablets (600–767px) */
+
 @media (min-width: 600px) and (max-width: 767px) { 
     header {
         background-color: black; /*gray; /* Testing responsive */
@@ -2276,6 +2298,9 @@ button:hover {
     .name-title {
     font-size: 4em;  
     }
+    .titleImage {
+        height: 250px;
+    }
 }
 /* Medium Tablets (768–991px) */
 @media (min-width: 768px) and (max-width: 991px) { 
@@ -2291,6 +2316,9 @@ button:hover {
     .name-title {
     font-size: 4em;  
     }
+    .titleImage {
+        height: 280px;
+    }
 }
 /* Large Tablets / Small Desktop (992–1199px) */
 @media (min-width: 992px) and (max-width: 1199px) { 
@@ -2302,6 +2330,9 @@ button:hover {
     }
     .name-title {
     font-size: 4em;  
+    }
+    .titleImage {
+        height: 350px;
     }
 }
 /* Desktop (1200–1599px) */
@@ -2324,8 +2355,6 @@ button:hover {
         margin:0 auto;
     }
 }
-
-
 
 div.type-tester {
     padding-top: 0px;
