--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -2064,7 +2064,7 @@ button:hover {
 /* Extra Small Phones (320–359px) */
 @media (max-width: 359px) { 
     header {
-        background-color: black; /*brown; /* Testing responsive */
+        background-color: brown; /* Testing responsive */
     }    
     header .navbar, header .familyName, header .logo {
         display: none;
@@ -2114,7 +2114,7 @@ button:hover {
 /* Small Phones (360–399px) */
 @media (min-width: 360px) and (max-width: 399px) { 
     header {
-        background-color: black; /*lightgray; /* Testing responsive */
+        background-color: lightgray; /* Testing responsive */
     }    
     header .navbar, header .familyName {
         display: none;
@@ -2164,7 +2164,7 @@ button:hover {
 /* Medium Phones (400–479px) */
 @media (min-width: 400px) and (max-width: 479px) { 
     header {
-        background-color: black; /*orange; /* Testing responsive */
+        background-color: orange; /* Testing responsive */
     }    
     header .navbar, header .familyName {
         display: none;
@@ -2214,7 +2214,7 @@ button:hover {
 /* Large Phones (480–599px) */
 @media (min-width: 480px) and (max-width: 599px) { 
     header {
-        background-color: black; /*pink; /* Testing responsive */
+        background-color: pink; /* Testing responsive */
     }    
     header .navbar, header .familyName {
         display: none;
@@ -2266,7 +2266,7 @@ button:hover {
 
 @media (min-width: 600px) and (max-width: 767px) { 
     header {
-        background-color: black; /*gray; /* Testing responsive */
+        background-color: gray; /* Testing responsive */
     }    
     header .familyName {
         display: none;
@@ -2305,9 +2305,9 @@ button:hover {
 /* Medium Tablets (768–991px) */
 @media (min-width: 768px) and (max-width: 991px) { 
     header {
-        background-color: black; /*purple; /* Testing responsive */
+        background-color: purple; /* Testing responsive */
     }    
-    header .familyName .andMore{
+    header .andMore{
         display: none;
     }
     fontdue-type-testers .type-tester {
@@ -2323,7 +2323,7 @@ button:hover {
 /* Large Tablets / Small Desktop (992–1199px) */
 @media (min-width: 992px) and (max-width: 1199px) { 
     header {
-        background-color: black; /*lightgreen; /* Testing responsive */
+        background-color: lightgreen; /* Testing responsive */
     }    
     fontdue-type-testers .type-tester {
     --type-tester--adjustment: 1;
@@ -2338,7 +2338,7 @@ button:hover {
 /* Desktop (1200–1599px) */
 @media (min-width: 1200px) and (max-width: 1599px) { 
     header {
-        background-color: black; /*pink; /* Testing responsive */
+        background-color: pink; /* Testing responsive */
     }    
     .row {
         width: 1200px;
