--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2042,7 +2042,8 @@ div.smallWeightTester {
 button.buy-button {
     font-size: 1.5em;
     padding: 0.4em;
-    background-color: #AAAAAA;
+    background-color: #808080;
+    color: #F0F0F0;
     margin-top: 0.4em;
     margin-bottom: 0.4em;
     text-align: center;
@@ -2056,9 +2057,24 @@ button.buy-button {
     transition: outline-color 0.2s ease;
 }
 
-button:hover {
-    /*outline-color: #007bff;*/
+button.buy-button:hover {
+    font-size: 1.5em;
+    padding: 0.4em;
+    background-color: #505050;
+    color: #E0E0E0;
+    margin-top: 0.4em;
+    margin-bottom: 0.4em;
+    text-align: center;
+    width: 80%;
+
+    border-radius: 6px;       /* small rounded corners */
+    border: none;             /* optional: remove default border */
+
+    outline: 1px solid transparent;
+    outline-offset: 1px; /* optional: moves the outline away a bit */
+    transition: outline-color 0.2s ease;
 }
+
 /* Media Queries */
 
 /* Extra Small Phones (320–359px) */
