--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -2146,7 +2146,7 @@ button.buy-button:hover {
 /* Extra Small Phones (320–359px) */
 @media (max-width: 359px) { 
     header {
-        background-color: brown; /* Testing responsive */
+        background-color: black; /*brown; /* Testing responsive */
     }    
     /*header .navbar, */
     header .familyName, header .logo {
@@ -2200,7 +2200,7 @@ button.buy-button:hover {
 /* Small Phones (360–399px) */
 @media (min-width: 360px) and (max-width: 399px) { 
     header {
-        background-color: lightgray; /* Testing responsive */
+        background-color: black; /*lightgray; /* Testing responsive */
     }    
     /*header .navbar, */
     header .familyName {
@@ -2255,7 +2255,7 @@ button.buy-button:hover {
 /* Medium Phones (400–479px) */
 @media (min-width: 400px) and (max-width: 479px) { 
     header {
-        background-color: orange; /* Testing responsive */
+        background-color: black; /*orange; /* Testing responsive */
     }    
     /*header .navbar, */
     header .familyName {
@@ -2310,7 +2310,7 @@ button.buy-button:hover {
 /* Large Phones (480–599px) */
 @media (min-width: 480px) and (max-width: 599px) { 
     header {
-        background-color: pink; /* Testing responsive */
+        background-color: black; /*pink; /* Testing responsive */
     }    
     /*header .navbar, */
     header .familyName {
@@ -2367,7 +2367,7 @@ button.buy-button:hover {
 
 @media (min-width: 600px) and (max-width: 767px) { 
     header {
-        background-color: gray; /* Testing responsive */
+        background-color: black; /*gray; /* Testing responsive */
     }    
     header .familyName {
         display: none;
@@ -2410,7 +2410,7 @@ button.buy-button:hover {
 /* Medium Tablets (768–991px) */
 @media (min-width: 768px) and (max-width: 991px) { 
     header {
-        background-color: purple; /* Testing responsive */
+        background-color: black; /*purple; /* Testing responsive */
     }    
     header .andMore{
         display: none;
@@ -2432,7 +2432,7 @@ button.buy-button:hover {
 /* Large Tablets / Small Desktop (992–1199px) */
 @media (min-width: 992px) and (max-width: 1199px) { 
     header {
-        background-color: lightgreen; /* Testing responsive */
+        background-color: black; /*lightgreen; /* Testing responsive */
     }    
     fontdue-type-testers .type-tester {
     --type-tester--adjustment: 1;
@@ -2448,7 +2448,7 @@ button.buy-button:hover {
 /* Desktop (1200–1599px) */
 @media (min-width: 1200px) and (max-width: 1599px) { 
     header {
-        background-color: pink; /* Testing responsive */
+        background-color: black; /*pink; /* Testing responsive */
     }    
     .row {
         width: 1200px;
