--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2483,7 +2483,7 @@ button.buy-button:hover {
 /* Desktop (1200–1599px) */
 @media (min-width: 1200px) and (max-width: 1599px) { 
     header {
-        background-color: pink; /* Testing responsive */
+        background-color: red; /* Testing responsive */
     }    
     .row {
         width: 1200px;
