--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -2043,6 +2043,8 @@ div.image {
 .column p {
     margin: 0 40px 0 0;
 }
+
+
 .column14 {
     /*flex: 1;*/
     width: 25%;
@@ -2071,6 +2073,11 @@ div.image {
     padding-right: 12px;
     box-sizing: border-box;
     background-color: #F0F0F0;
+}
+
+.sticky {
+  position: sticky;
+  top: 70px;
 }
 
 div.responsiveShow {
@@ -2483,7 +2490,7 @@ button.buy-button:hover {
 /* Desktop (1200–1599px) */
 @media (min-width: 1200px) and (max-width: 1599px) { 
     header {
-        background-color: pink; /* Testing responsive */
+        background-color: red; /* Testing responsive */
     }    
     .row {
         width: 1200px;
