--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2043,6 +2043,8 @@ div.image {
 .column p {
     margin: 0 40px 0 0;
 }
+
+
 .column14 {
     /*flex: 1;*/
     width: 25%;
@@ -2071,6 +2073,11 @@ div.image {
     padding-right: 12px;
     box-sizing: border-box;
     background-color: #F0F0F0;
+}
+
+.sticky {
+  position: sticky;
+  top: 70px;
 }
 
 div.responsiveShow {
